# FDverb

./: .gitignore  .gitmodules  README.md
plugin/: CMakeLists.txt
plugin/src/: EarlyReflections.cpp  EarlyReflections.h  EnvelopeFollower.cpp  EnvelopeFollower.h  Fdverb.cpp  Fdverb.h  FdverbLookAndFeel.h  LockFreeFifo.h  MainUI.cpp  MainUI.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectralDisplay.cpp  SpectralDisplay.h  Utils.h
presets/: aura.yaml  bell.yaml  dark-room.yaml  default.yaml  drifter.yaml  gated.yaml  live-room.yaml  plot_dry-er-tail.yaml  plot_envelope-grams.yaml  shifter.yaml
presets/vstpreset/: aura.vstpreset  bell.vstpreset  dark-room.vstpreset  default.vstpreset  drifter.vstpreset  gated.vstpreset  live-room.vstpreset  shifter.vstpreset
python/: FDverb.ipynb  requirements-dev.txt  requirements.in  requirements.txt
python/fdverb/: JuceRandom.py  boston_er.py  utils.py
python/fig_out/: dry-er-tail.tex  envelope-grams.tex
python/scripts/: batch_proc.py  runtime_analysis.ipynb  yaml_to_preset.py
